# sfu-qc-experiments

mockturtle-logic/: .editorconfig  .gitignore  CHANGELOG.md  mockturtle-logic.cabal
mockturtle-logic/cxx-sources/src/: blar.md  mockturtle_bindings.cpp
mockturtle-logic/src/Logic/: MockTurtle.hs
mockturtle-logic/src/Logic/MockTurtle/: LowLevel.hs  XAG.hs
mockturtle-logic/test/: Main.hs
pebble-graph/: CHANGELOG.md  README.md  package.yaml  pebble-graph.cabal
pebble-graph/app/: Main.hs
pebble-graph/app/PebblingGame/: AStar.hs  FloydWarshall.hs  Graph.hs  Pebbling.hs  TinyIrreversible.hs  TinyReversible.hs  TinyXorAnd.hs  XAG.hs
pebble-graph/src/: Lib.hs
qiskit-playground/: mod_mult_55_equiv.ipynb  requirements.txt
quirk/: Quirk.html  mod_mult_55_equiv.ipynb  parseqc.py  parsyqc.py  qctoquirk.py  quirk-params  requirements.txt  test_parsyqc.ipynb
xag-opt/: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  xag-opt.cabal
xag-opt/app/: Main.hs
xag-opt/benchmarks/: .gitignore  Makefile  mlut2xag.py  process.sh
xag-opt/benchmarks/processed/: Adder.hs  Bar.hs  Div.hs  Log2.hs  Max.hs  Multiplier.hs  Sin.hs  Sqrt.hs  Square.hs  adder-xag.txt  adder.mlut  adder.xagb  bar.mlut  bar.xagb  div.mlut  div.xagb  hyp.mlut  log2-xag.txt  log2.mlut  log2.xagb  max.mlut  max.xagb  multiplier.mlut  multiplier.xagb  sin-xag.txt  sin.mlut  sin.xagb  sqrt-xag.txt  sqrt.mlut  sqrt.xagb  square.mlut  square.xagb
xag-opt/src/: XorAndGraph.hs
xag-opt/src/XAG/: AffineEquivalence.hs  Benchmarks.hs  Graph.hs  MinMultSat.hs  Optimize.hs  SDCODC.hs  Simplify.hs
xag-opt/src/Xag/: AffineEquivalence.hs  Benchmarks.hs  Graph.hs  Optimize.hs
xag-opt/test/: Main.hs
xag-opt/test/Xag/Benchmarks/: Adder.hs  Bar.hs  Div.hs  Log2.hs  Max.hs  Multiplier.hs  Sin.hs  Sqrt.hs  Square.hs
