cabal-version:      3.0
name:               mockturtle-logic

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:  +-+------- breaking API changes
--               | | +----- non-breaking API additions
--               | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Wrapper for the mockturtle logic network library from EPFL

-- A longer description of the package.
description:
  A simple wrapper around mockturtle, a C++ library from EPFL for optimizing
  and transforming logic networks.

  At the moment, the only network type and operation supported is optimization
  of XOR-AND graphs. This library supplies a simple XAG data type and a
  function for optimizing the XAG via mockturtle.

license:            MIT
license-file:       LICENSE
author:             Joseph Lunderville
maintainer:         jlunderv@sfu.ca

-- A copyright notice.
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:
  CHANGELOG.md
  cxx-sources/mockturtle/LICENSE
  cxx-sources/mockturtle/README.md
  cxx-sources/mockturtle/lib/fmt/LICENSE.rst

extra-source-files:
  cxx-sources/mockturtle/include/mockturtle/algorithms/aig_balancing.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aig_resub.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/akers_synthesis.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/aqfp_assumptions.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/aqfp_cleanup.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/aqfp_db.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/aqfp_fanout_resyn.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/aqfp_legalization.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/aqfp_node_resyn.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/aqfp_rebuild.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/aqfp_resynthesis.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/aqfp_retiming.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/buffer_insertion.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/buffer_verification.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/detail/dag.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/detail/dag_cost.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/detail/dag_gen.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/detail/dag_util.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/detail/db_builder.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/detail/db_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/detail/npn_cache.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/detail/partial_dag.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/mig_algebraic_rewriting_splitters.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/mig_resub_splitters.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/aqfp/optimal_buffer_insertion.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/balancing/esop_balancing.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/balancing/sop_balancing.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/balancing/utils.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/balancing.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/bi_decomposition.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cell_window.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/circuit_validator.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cleanup.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cnf.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/collapse_mapped.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cover_to_graph.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cut_enumeration/cnf_cut.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cut_enumeration/exact_map_cut.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cut_enumeration/gia_cut.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cut_enumeration/mf_cut.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cut_enumeration/rewrite_cut.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cut_enumeration/spectr_cut.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cut_enumeration/tech_map_cut.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cut_enumeration.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/cut_rewriting.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/decomposition.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/detail/database_generator.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/detail/mffc_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/detail/minmc_xags.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/detail/resub_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/detail/switching_activity.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/dont_cares.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/dsd_decomposition.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/emap.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/equivalence_checking.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/equivalence_classes.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/exact_mc_synthesis.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/exorcism.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/experimental/boolean_optimization.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/experimental/cost_generic_resub.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/experimental/cost_resyn.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/experimental/decompose_multioutput.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/experimental/sim_resub.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/experimental/window_resub.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/explorer.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/extract_adders.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/extract_linear.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/functional_reduction.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/gates_to_nodes.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/klut_to_graph.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/linear_resynthesis.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/lut_mapper.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/lut_mapping.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/mapper.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/mig_algebraic_rewriting.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/mig_inv_optimization.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/mig_inv_propagation.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/mig_resub.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/miter.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/network_fuzz_tester.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/akers.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/bidecomposition.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/cached.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/composed.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/davio.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/direct.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/dsd.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/exact.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/mig_npn.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/null.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/shannon.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/sop_factoring.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/traits.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/xag_minmc.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/xag_minmc2.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/xag_npn.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/xmg3_npn.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis/xmg_npn.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/node_resynthesis.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/pattern_generation.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/reconv_cut.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/refactoring.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/resubstitution.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/resyn_engines/aig_enumerative.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/resyn_engines/dump_resyn.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/resyn_engines/mig_enumerative.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/resyn_engines/mig_resyn.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/resyn_engines/mux_resyn.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/resyn_engines/xag_resyn.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/retiming.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/rewrite.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/satlut_mapping.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/sim_resub.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/simulation.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/testcase_minimizer.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/window_rewriting.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/xag_algebraic_rewriting.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/xag_balancing.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/xag_optimization.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/xag_resub.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/xag_resub_withDC.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/xmg_algebraic_rewriting.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/xmg_optimization.hpp
  cxx-sources/mockturtle/include/mockturtle/algorithms/xmg_resub.hpp
  cxx-sources/mockturtle/include/mockturtle/generators/arithmetic.hpp
  cxx-sources/mockturtle/include/mockturtle/generators/control.hpp
  cxx-sources/mockturtle/include/mockturtle/generators/legacy.hpp
  cxx-sources/mockturtle/include/mockturtle/generators/majority.hpp
  cxx-sources/mockturtle/include/mockturtle/generators/majority_n.hpp
  cxx-sources/mockturtle/include/mockturtle/generators/modular_arithmetic.hpp
  cxx-sources/mockturtle/include/mockturtle/generators/random_network.hpp
  cxx-sources/mockturtle/include/mockturtle/generators/self_dualize.hpp
  cxx-sources/mockturtle/include/mockturtle/generators/sorting.hpp
  cxx-sources/mockturtle/include/mockturtle/interface.hpp
  cxx-sources/mockturtle/include/mockturtle/io/aiger_reader.hpp
  cxx-sources/mockturtle/include/mockturtle/io/bench_reader.hpp
  cxx-sources/mockturtle/include/mockturtle/io/blif_reader.hpp
  cxx-sources/mockturtle/include/mockturtle/io/bristol_reader.hpp
  cxx-sources/mockturtle/include/mockturtle/io/dimacs_reader.hpp
  cxx-sources/mockturtle/include/mockturtle/io/genlib_reader.hpp
  cxx-sources/mockturtle/include/mockturtle/io/pla_reader.hpp
  cxx-sources/mockturtle/include/mockturtle/io/serialize.hpp
  cxx-sources/mockturtle/include/mockturtle/io/super_reader.hpp
  cxx-sources/mockturtle/include/mockturtle/io/verilog_reader.hpp
  cxx-sources/mockturtle/include/mockturtle/io/write_aiger.hpp
  cxx-sources/mockturtle/include/mockturtle/io/write_bench.hpp
  cxx-sources/mockturtle/include/mockturtle/io/write_blif.hpp
  cxx-sources/mockturtle/include/mockturtle/io/write_dimacs.hpp
  cxx-sources/mockturtle/include/mockturtle/io/write_dot.hpp
  cxx-sources/mockturtle/include/mockturtle/io/write_genlib.hpp
  cxx-sources/mockturtle/include/mockturtle/io/write_patterns.hpp
  cxx-sources/mockturtle/include/mockturtle/io/write_verilog.hpp
  cxx-sources/mockturtle/include/mockturtle/mockturtle.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/abstract_xag.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/aig.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/aqfp.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/block.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/buffered.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/cover.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/crossed.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/detail/foreach.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/events.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/generic.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/gia.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/klut.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/mig.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/muxig.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/sequential.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/storage.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/tig.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/xag.hpp
  cxx-sources/mockturtle/include/mockturtle/networks/xmg.hpp
  cxx-sources/mockturtle/include/mockturtle/properties/aqfpcost.hpp
  cxx-sources/mockturtle/include/mockturtle/properties/litcost.hpp
  cxx-sources/mockturtle/include/mockturtle/properties/mccost.hpp
  cxx-sources/mockturtle/include/mockturtle/properties/migcost.hpp
  cxx-sources/mockturtle/include/mockturtle/properties/xmgcost.hpp
  cxx-sources/mockturtle/include/mockturtle/traits.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/abc.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/algorithm.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/cost_functions.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/cuts.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/debugging_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/hash_functions.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/include/percy.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/include/supergate.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/index_list.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/json_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/mixed_radix.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/name_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/network_cache.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/network_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/node_map.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/null_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/progress_bar.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/recursive_cost_functions.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/sop_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/standard_cell.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/stopwatch.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/string_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/struct_library.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/super_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/tech_library.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/truth_table_cache.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/truth_table_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/utils/window_utils.hpp
  cxx-sources/mockturtle/include/mockturtle/views/binding_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/cell_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/choice_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/cnf_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/color_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/cost_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/cut_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/depth_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/dont_care_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/dont_touch_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/fanout_limit_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/fanout_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/immutable_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/mapping_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/mffc_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/names_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/rank_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/topo_view.hpp
  cxx-sources/mockturtle/include/mockturtle/views/window_view.hpp
  cxx-sources/mockturtle/lib/abcesop/eabc/abc_global.h
  cxx-sources/mockturtle/lib/abcesop/eabc/exor.h
  cxx-sources/mockturtle/lib/abcesop/eabc/vecInt.h
  cxx-sources/mockturtle/lib/abcesop/eabc/vecPtr.h
  cxx-sources/mockturtle/lib/abcesop/eabc/vecWec.h
  cxx-sources/mockturtle/lib/abcsat/abc/abc_global.h
  cxx-sources/mockturtle/lib/abcsat/abc/abc_namespaces.h
  cxx-sources/mockturtle/lib/abcsat/abc/AbcGlucose.h
  cxx-sources/mockturtle/lib/abcsat/abc/Alg.h
  cxx-sources/mockturtle/lib/abcsat/abc/Alloc.h
  cxx-sources/mockturtle/lib/abcsat/abc/BoundedQueue.h
  cxx-sources/mockturtle/lib/abcsat/abc/Constants.h
  cxx-sources/mockturtle/lib/abcsat/abc/Dimacs.h
  cxx-sources/mockturtle/lib/abcsat/abc/Heap.h
  cxx-sources/mockturtle/lib/abcsat/abc/IntTypes.h
  cxx-sources/mockturtle/lib/abcsat/abc/Map.h
  cxx-sources/mockturtle/lib/abcsat/abc/pstdint.h
  cxx-sources/mockturtle/lib/abcsat/abc/Queue.h
  cxx-sources/mockturtle/lib/abcsat/abc/satClause.h
  cxx-sources/mockturtle/lib/abcsat/abc/satSolver.h
  cxx-sources/mockturtle/lib/abcsat/abc/satStore.h
  cxx-sources/mockturtle/lib/abcsat/abc/satVec.h
  cxx-sources/mockturtle/lib/abcsat/abc/SimpSolver.h
  cxx-sources/mockturtle/lib/abcsat/abc/Solver.h
  cxx-sources/mockturtle/lib/abcsat/abc/SolverTypes.h
  cxx-sources/mockturtle/lib/abcsat/abc/Sort.h
  cxx-sources/mockturtle/lib/abcsat/abc/system.h
  cxx-sources/mockturtle/lib/abcsat/abc/utilDouble.h
  cxx-sources/mockturtle/lib/abcsat/abc/Vec.h
  cxx-sources/mockturtle/lib/abcsat/abc/vecInt.h
  cxx-sources/mockturtle/lib/abcsat/abc/vecWec.h
  cxx-sources/mockturtle/lib/abcsat/abc/XAlloc.h
  cxx-sources/mockturtle/lib/bill/bill/bill.hpp
  cxx-sources/mockturtle/lib/bill/bill/dd/cudd_zdd.hpp
  cxx-sources/mockturtle/lib/bill/bill/dd/zdd.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/cardinality.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/incremental_totalizer_cardinality.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/interface/abc_bmcg.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/interface/abc_bsat2.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/interface/common.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/interface/ghack.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/interface/glucose.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/interface/maple.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/interface/types.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/interface/z3.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/abc_global.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/abc_namespaces.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/AbcGlucose.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/Alg.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/Alloc.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/BoundedQueue.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/Constants.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/Dimacs.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/Heap.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/IntTypes.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/Map.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/pstdint.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/Queue.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/satClause.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/satSolver.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/satStore.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/satVec.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/SimpSolver.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/Solver.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/SolverTypes.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/Sort.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/system.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/utilDouble.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/Vec.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/vecInt.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/vecWec.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc/XAlloc.h
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/abc.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/ghack.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/glucose.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/solver/maple.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/solver.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/tseytin.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/unsat_cores.hpp
  cxx-sources/mockturtle/lib/bill/bill/sat/xor_clauses.hpp
  cxx-sources/mockturtle/lib/bill/bill/utils/hash.hpp
  cxx-sources/mockturtle/lib/bill/bill/utils/platforms.hpp
  cxx-sources/mockturtle/lib/fmt/fmt/chrono.h
  cxx-sources/mockturtle/lib/fmt/fmt/color.h
  cxx-sources/mockturtle/lib/fmt/fmt/compile.h
  cxx-sources/mockturtle/lib/fmt/fmt/core.h
  cxx-sources/mockturtle/lib/fmt/fmt/format-inl.h
  cxx-sources/mockturtle/lib/fmt/fmt/format.h
  cxx-sources/mockturtle/lib/fmt/fmt/locale.h
  cxx-sources/mockturtle/lib/fmt/fmt/os.h
  cxx-sources/mockturtle/lib/fmt/fmt/ostream.h
  cxx-sources/mockturtle/lib/fmt/fmt/posix.h
  cxx-sources/mockturtle/lib/fmt/fmt/printf.h
  cxx-sources/mockturtle/lib/fmt/fmt/ranges.h
  cxx-sources/mockturtle/lib/json/nlohmann/json.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/affine.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/algorithm.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/bit_operations.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/cnf.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/constructors.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/cube.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/decomposition.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/detail/constants.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/detail/linear_constants.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/detail/mscfix.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/detail/shift.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/detail/utils.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/dynamic_truth_table.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/enumeration.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/esop.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/hash.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/implicant.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/isop.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/karnaugh_map.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/kitty.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/npn.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/operations.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/operators.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/partial_truth_table.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/permutation.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/print.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/properties.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/quaternary_truth_table.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/spectral.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/spp.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/static_truth_table.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/ternary_truth_table.hpp
  cxx-sources/mockturtle/lib/kitty/kitty/traits.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/aiger.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/bench.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/blif.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/bristol.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/common.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/detail/call_in_topological_order.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/detail/tokenizer.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/detail/utils.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/diagnostics.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/diagnostics.inc
  cxx-sources/mockturtle/lib/lorina/lorina/dimacs.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/genlib.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/lorina.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/pla.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/super.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/verilog.hpp
  cxx-sources/mockturtle/lib/lorina/lorina/verilog_regex.hpp
  cxx-sources/mockturtle/lib/matplot/matplot/matplotlibcpp.h
  cxx-sources/mockturtle/lib/nauty/gtools.h
  cxx-sources/mockturtle/lib/nauty/gutils.h
  cxx-sources/mockturtle/lib/nauty/naugroup.h
  cxx-sources/mockturtle/lib/nauty/naugstrings.h
  cxx-sources/mockturtle/lib/nauty/naurng.h
  cxx-sources/mockturtle/lib/nauty/nausparse.h
  cxx-sources/mockturtle/lib/nauty/nautaux.h
  cxx-sources/mockturtle/lib/nauty/nautinv.h
  cxx-sources/mockturtle/lib/nauty/naututil.h
  cxx-sources/mockturtle/lib/nauty/nauty.h
  cxx-sources/mockturtle/lib/nauty/planarity.h
  cxx-sources/mockturtle/lib/nauty/quarticirred28.h
  cxx-sources/mockturtle/lib/nauty/rng.h
  cxx-sources/mockturtle/lib/nauty/schreier.h
  cxx-sources/mockturtle/lib/nauty/traces.h
  cxx-sources/mockturtle/lib/parallel_hashmap/parallel_hashmap/btree.h
  cxx-sources/mockturtle/lib/parallel_hashmap/parallel_hashmap/meminfo.h
  cxx-sources/mockturtle/lib/parallel_hashmap/parallel_hashmap/phmap.h
  cxx-sources/mockturtle/lib/parallel_hashmap/parallel_hashmap/phmap_base.h
  cxx-sources/mockturtle/lib/parallel_hashmap/parallel_hashmap/phmap_bits.h
  cxx-sources/mockturtle/lib/parallel_hashmap/parallel_hashmap/phmap_config.h
  cxx-sources/mockturtle/lib/parallel_hashmap/parallel_hashmap/phmap_dump.h
  cxx-sources/mockturtle/lib/parallel_hashmap/parallel_hashmap/phmap_fwd_decl.h
  cxx-sources/mockturtle/lib/parallel_hashmap/parallel_hashmap/phmap_utils.h
  cxx-sources/mockturtle/lib/percy/percy/chain.hpp
  cxx-sources/mockturtle/lib/percy/percy/cnf.hpp
  cxx-sources/mockturtle/lib/percy/percy/concurrentqueue.h
  cxx-sources/mockturtle/lib/percy/percy/dag.hpp
  cxx-sources/mockturtle/lib/percy/percy/dag_generation.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/aig_encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/ditt_encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/ditt_maj_encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/maj_encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/mig_encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/msv_encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/partial_dag_encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/ssv_dag_encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/ssv_encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/ssv_fence2_encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders/ssv_fence_encoder.hpp
  cxx-sources/mockturtle/lib/percy/percy/encoders.hpp
  cxx-sources/mockturtle/lib/percy/percy/fence.hpp
  cxx-sources/mockturtle/lib/percy/percy/generators/partial_dag3_generator.hpp
  cxx-sources/mockturtle/lib/percy/percy/generators/partial_dag_generator.hpp
  cxx-sources/mockturtle/lib/percy/percy/io.hpp
  cxx-sources/mockturtle/lib/percy/percy/majority_chain.hpp
  cxx-sources/mockturtle/lib/percy/percy/mig.hpp
  cxx-sources/mockturtle/lib/percy/percy/misc.hpp
  cxx-sources/mockturtle/lib/percy/percy/partial_dag.hpp
  cxx-sources/mockturtle/lib/percy/percy/percy.hpp
  cxx-sources/mockturtle/lib/percy/percy/printer.hpp
  cxx-sources/mockturtle/lib/percy/percy/sat_circuits.hpp
  cxx-sources/mockturtle/lib/percy/percy/solvers/bmcg_sat.hpp
  cxx-sources/mockturtle/lib/percy/percy/solvers/bsat2.hpp
  cxx-sources/mockturtle/lib/percy/percy/solvers/cmsat.hpp
  cxx-sources/mockturtle/lib/percy/percy/solvers/glucose.hpp
  cxx-sources/mockturtle/lib/percy/percy/solvers/satoko.hpp
  cxx-sources/mockturtle/lib/percy/percy/solvers/solver_wrapper.hpp
  cxx-sources/mockturtle/lib/percy/percy/solvers.hpp
  cxx-sources/mockturtle/lib/percy/percy/spec.hpp
  cxx-sources/mockturtle/lib/percy/percy/tt_utils.hpp
  cxx-sources/mockturtle/lib/rang/rang/rang.hpp

common warnings
  ghc-options: -Wall

library
  -- Import common warning flags.
  import:             warnings

  -- Modules exported by the library.
  exposed-modules:
    Logic.MockTurtle
    Logic.MockTurtle.XAG

  -- Modules included in this library but not exported.
  other-modules:      Logic.MockTurtle.LowLevel

  -- Base language which the package is written in.
  default-language:   Haskell2010

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  default-extensions:
    DeriveGeneric
    ImportQualifiedPost
    InstanceSigs

  cxx-sources:        cxx-sources/src/mockturtle_bindings.cpp
  cxx-options:        -g -std=c++17 "-Wp,-w" -DFMT_HEADER_ONLY
  include-dirs:
    cxx-sources/mockturtle/include cxx-sources/mockturtle/lib/abcesop
    cxx-sources/mockturtle/lib/abcsat cxx-sources/mockturtle/lib/bill
    cxx-sources/mockturtle/lib/fmt cxx-sources/mockturtle/lib/json
    cxx-sources/mockturtle/lib/kitty cxx-sources/mockturtle/lib/lorina
    cxx-sources/mockturtle/lib/matplot cxx-sources/mockturtle/lib/nauty
    cxx-sources/mockturtle/lib/parallel_hashmap
    cxx-sources/mockturtle/lib/percy cxx-sources/mockturtle/lib/rang

  -- Other library packages from which modules are imported.
  build-depends:      base >=4.17 && <4.21

  -- Directories containing source files.
  hs-source-dirs:     src

  if os(linux)
    extra-libraries: stdc++

test-suite mockturtle-logic-test
  -- Import common warning flags.
  import:             warnings

  -- Base language which the package is written in.
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    ImportQualifiedPost
    InstanceSigs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- The interface type and version of the test suite.
  type:               exitcode-stdio-1.0

  -- Directories containing source files.
  hs-source-dirs:     test

  -- The entrypoint to the test suite.
  main-is:            Main.hs

  -- Test dependencies.
  build-depends:
    , base              >=4.17 && <4.21
    , mockturtle-logic
